--- a/.github/workflows/dockerhub_readme.yml
+++ b/.github/workflows/dockerhub_readme.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   update-readme:
+    name: Update Dockerhub README
     runs-on: ubuntu-latest
     steps:
       - name: Docker Hub Description
